<resources>
    <!-- DEFAULT -->
    <string name="app_name">IMH Tailerra</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="connection_lost">Failed to connect to the server</string>

    <!-- NON DEFAULT -->
    <string name="working">Working:</string>
    <string name="half_working">Half Working:</string>
    <string name="not_working">Not Working:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="spent">Time spent</string>
    <string name="rep">Replacements</string>
    <string name="failLoc">Failure localization</string>
    <string name="percent">%1$d %%</string>
    <string name="nav_all_zones">&#160;&#160;&#160;&#160;Machine status</string>
    <string name="nav_work_orders">&#160;&#160;&#160;&#160;Work Orders</string>
    <string name="nav_instructions">&#160;&#160;&#160;&#160;Remaining instructions</string>
    <string name="nav_settings">&#160;&#160;&#160;&#160;Settings</string>
    <string name="nav_logout">&#160;&#160;&#160;&#160;Log out</string>
    <string name="nav_help">Help &amp; Feedback</string>
    <string name="action_login">Logout</string>
    <string name="title_total">TOTAL</string>
    <string name="availability">Availability after repair</string>
    <string name="see_instructions">SEE INSTRUCTIONS</string>
    <string name="more_info">DETAILS</string>
    <string name="send">SEND</string>
    <string name="breakdown">Breakdown</string>
    <string name="description">Description</string>
    <string name="maintenance_request_machine">Machine: %1$s</string>
    <string name="machine_details">Touch for details</string>
    <string name="failure_type">Failure type:</string>
    <string name="undo">UNDO</string>
    <string name="noInstruc">No instructions available</string>
    <string name="source">Notes</string>
    <string-array name="arr_failure_type">
        <item>Choose failure type</item>
        <item>Electrical</item>
        <item>Mechanical</item>
        <item>Security</item>
        <item>Others</item>
    </string-array>

    <string name="equipment_available">Equipment available:</string>
    <string name="fill_empty_fields">FILL EMPTY FIELDS</string>
    <string name="add_new_request">Add new maintenance request</string>

    <string-array name="arr_equipment_available">
        <item>Choose availability</item>
        <item>Yes</item>
        <item>No</item>
        <item>Reduced availability</item>
    </string-array>

    <string name="choose">Choose</string>

    <string-array name="failure_localization">
        <item>Choose failure localization</item>
        <item>Gear box</item>
        <item>Feed</item>
        <item>Measurements</item>
        <item>Transmission</item>
        <item>Safety</item>
        <item>Lubrication system</item>
        <item>Electric panel</item>
        <item>Hydraulic group</item>
        <item>Pneumatic</item>
    </string-array>

    <!-- INSTRUCTIONS ACTIVITY -->
    <string name="instructions">No pending instructions</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="account_settings">Account settings</string>
    <string name="required_fields">You need to complete all fields</string>
    <string name="title">Change password</string>
    <string name="passWarning">Enter the correct current password</string>
    <string name="username">Username:&#160;&#160;</string>
    <string name="currenPass">Current password:</string>
    <string name="edCurrenPass">Enter your current password here</string>
    <string name="newPass">New password:</string>
    <string name="edNewPass">Enter your new password here</string>
    <string name="btnChangePass">Change password</string>
    <string name="preferences">Preferences</string>
    <string name="change_language">Change language: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_invalid_msg">Invalid login!</string>
    <string name="login_password_txt">Password</string>
    <string name="login_username_txt">Username</string>
    <string name="password_change_ok">Password changed successfully</string>
    <string name="password_change_error">Error while changing password, try again please.</string>

    <string-array name="languages">
        <item>Choose your language</item>
        <item>English</item>
        <item>Basque</item>
    </string-array>

    <!-- CONNECTION LOST DIALOG -->
    <string name="textConnectLost">Could not perform action due to server failure</string>
    <string name="btnExit">Exit</string>
</resources>
