<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tartanga.dam.imhandroid.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="30dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/txtvUsername"
        android:text="@string/username" />

    <TextView
        android:text="@string/currenPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="60dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/txtvCurrentPass"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/textView"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChangePass"
        style="@style/Widget.AppCompat.Button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="221dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        tools:layout_editor_absoluteY="85dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/editText4"
        android:hint="@string/edCurrenPass"
        android:textSize="14sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        tools:layout_editor_absoluteY="167dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/newPass"
        android:hint="@string/edNewPass"
        android:textSize="14sp" />

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/txtvTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</android.support.constraint.ConstraintLayout>
